resloved(layout): fix mini bug broken layout in login page

--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,7 @@
 
 .login-form-forgot {
     float: right;
+    margin-top: 13px !important;
 }
 
 .checkbox-login-form-forgot {
